[ref] Use List.of instead of Arrays.toList