@@ -8,9 +8,7 @@ package de.uib.configed.gui;
 
 import java.awt.Rectangle;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -380,7 +378,7 @@ public class ConfigedMain {
 		fetchDepots();
 
 		depotsList.setInfo(depots);
-		List<String> oldSelectedDepots = Arrays.asList(backslashPattern
+		List<String> oldSelectedDepots = List.of(backslashPattern
 				.matcher(Configed.getSavedStates().getProperty("selectedDepots",
 						persistenceController.getDataServices().hostInfoCollections.getConfigServer()))
 				.replaceAll("").split(","));
@@ -531,7 +529,7 @@ public class ConfigedMain {
 	}
 
 	public void setClient(String clientName) {
-		setClients(Collections.singleton(clientName));
+		setClients(Set.of(clientName));
 	}
 
 	public void setClients(Collection<String> clientNames) {
@@ -805,7 +803,7 @@ public class ConfigedMain {
 		String oldRepresentative = depotRepresentative;
 
 		String configServer = persistenceController.getDataServices().hostInfoCollections.getConfigServer();
-		Set<String> clientDepots = selectedClients.isEmpty() ? Collections.emptySet() : getDepotsOfSelectedClients();
+		Set<String> clientDepots = selectedClients.isEmpty() ? Set.of() : getDepotsOfSelectedClients();
 
 		Logging.info(this, "Selected depots: " + selectedDepots);
 		Logging.info(this, "Depots of selected clients: " + clientDepots);
